# ai_agent_rag_system

./: .gitignore  README.md  ingest.py  main.py  pyproject.toml  server.py
.claude/: settings.json
.claude/agents/: search-personnel.md  search-proposals.md
.claude/commands/: delete-document.md  ingest-document.md  list-documents.md  search-personnel.md  search-proposals.md
.claude/hooks/: check-ingest-format.sh  log-output-write.sh
src/: server.py
