[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "mcp>=1.28.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "reportlab>=5.0.0",
    "sentence-transformers>=5.6.0",
]
